--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-    "url": "www.mappasaurus.com",
-    "name": "Mappasaurus",
+    "url": "https://tma.mappasaurus.com",
+    "name": "Crackasaurus",
     "iconUrl": "https://i.postimg.cc/fybjXDtp/logo.png"
 }
