--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-    "url": "https://tma.mappasaurus.com",
+    "url": "https://2023qjr0-4001.inc1.devtunnels.ms/",
     "name": "Crackasaurus",
     "iconUrl": "https://i.postimg.cc/fybjXDtp/logo.png"
 }
