--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
     "url": "https://tmadev.mappasaurus.com",
     "name": "Crackasaurus",
-    "iconUrl": "https://i.postimg.cc/fybjXDtp/logo.png"
+    "iconUrl": "https://storage.mappasaurus.com/mappasaurus-media/Mappasaurus%20Logo%20Icon.png"
 }
