--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-    "url": "https://tmadev.mappasaurus.com",
+    "url": "https://tma.mappasaurus.com",
     "name": "Crackasaurus",
     "iconUrl": "https://storage.mappasaurus.com/mappasaurus-media/Mappasaurus_Icon.png"
 }
